--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: conversao-temperatura
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: conversao-temperatura
@@ -14,6 +14,19 @@ spec:
     spec:
       containers:
         - name: conversao
-          image: aakvaa/conversao-temperatura:latest
+          image: aaakvaaa/conversao-temperatura:1.1
           ports:
             - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: conversao-temperatura
+spec:
+  selector:
+    app: conversao-temperatura
+  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 8080
+      nodePort: 30000
